# depthstream

./: .gitignore  LICENSE  README.md
dstream/: dstream.sln
dstream/dscalib/: dscalib.vcxproj  main.cpp  support.h
dstream/dscore/: DSCore.cpp  DSCore.h  DSKernels.cu  DSKernels.cuh  dscore.vcxproj  kernels.cu  kernels.cuh
dstream/dsdemo/: dsdemo.cpp  dsdemo.h  dsdemo.qrc  dsdemo.ui  dsdemo.vcxproj  dsdemo.vcxproj.filters  main.cpp
dstream/dsdemo/GeneratedFiles/: qrc_dsdemo.cpp  ui_dsdemo.h
dstream/dseval/: bm_sgbm.m  compute_bmsgbm.m  disp_error.m  disp_error_image.m  dseval.vcxproj  dseval.vcxproj.filters  error_colormap.m  evaluate.m  main.cpp  mat_eval.mat  middeval_code.txt  support.h  vx_bm.cpp  vx_bm.hpp  vx_sgbm.cpp  vx_sgbm.hpp
dstream/dsmain/: DSCalibrator.cpp  DSCalibrator.h  DSException.cpp  DSException.h  DSFrame.cpp  DSFrame.h  DSMatcher.cpp  DSMatcher.h  DSProcess.h  DSRectifier.cpp  DSRectifier.h  DSStream.cpp  DSStream.h  dsmain.vcxproj  dsmain.vcxproj.filters
dstream/dsmeasure/: dsmeasure.vcxproj  dsmeasure.vcxproj.filters  main.cpp  support.h
dstream/kitteval/devkit/: readme.txt
dstream/kitteval/devkit/cpp/: evaluate_stereo.cpp
dstream/kitteval/devkit/matlab/: demo.m  demo_mod.m  evaluate.m  flow_error_histogram.m  flow_error_image.m
dstream/kitteval/devkit/matlab/data/: Thumbs.db
dstream/middeval/middlebury/cvkit_src/: CHANGES.txt  CMakeLists.txt  INSTALL.txt  LICENSE.txt  README.txt  USAGE.txt
dstream/middeval/middlebury/cvkit_src/bgui/: CMakeLists.txt  basewindow_win32.cc  basewindow_x11.cc  fileimagewindow.cc  fileimagewindow.h  imageadapter.h  imagewindow.cc
dstream/middeval/middlebury/cvkit_src/cmake/: CVKITConfig.cmake.in  NSIS.template.in
dstream/middeval/middlebury/cvkit_src/example/: README.txt
dstream/middeval/middlebury/cvkit_src/gimage/: CMakeLists.txt  color.h  gdal_io.cc  gdal_io.h  image.h  io.cc  io.h  jpeg_io.cc  jpeg_io.h  paint.h  png_io.cc  png_io.h  pnm_io.cc  pnm_io.h  raw_io.cc  raw_io.h
dstream/middeval/middlebury/cvkit_src/gmath/: CMakeLists.txt  camera.cc  camera.h  linalg.h  minpack.cc  minpack.h  polynomial.cc  polynomial.h
dstream/middeval/middlebury/cvkit_src/gutil/: CMakeLists.txt  fixedint.h  misc.cc  parameter.cc  parameter.h  properties.h  thread_cpp11.cc  thread_pthread.cc  version.h
dstream/middeval/middlebury/cvkit_src/gvr/: CMakeLists.txt  cameracollection.cc  glcamera.h  glcoloredlines.cc  glcoloredmesh.cc  glcoloredpointcloud.cc  glmain.cc  glmesh.cc  glmisc.cc  glmisc.h  glpointcloud.cc  glpointcloud.h  gltext.h  gltexturedmesh.cc  glworld.cc  glworld.h  model.cc  ply.cc
dstream/middeval/middlebury/cvkit_src/tools/: CMakeLists.txt  imgcmd.cc  sv.cc
dstream/middeval/middlebury/matlab_sdk/: README.txt  main.m  readpfm.m  stereoConsistencyCheck.m  stereoMatchWindowCensus.m
dstream/middeval/middlebury/matlab_sdk/modified_matlab_sdk/: evaldisps.m  evaltrainingset.m  main.m  pfmwrite.m  readpfm.m  round_up_to_multiple.m  scan_path.m  timewrite.m
